updated law website

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <img src="projects/assets/logo.png" alt="Logo" class="navbar-logo">
                 My All Websites</a>
             <ul class="nav-links">
-                <li><a href="projects/law website/index.html">law website</a></li>
-                <li><a href="projects/Red cap resort/index.html">Hotel website</a></li>
-                <li><a href="projects/personal portfolio/index2.html">Personal Portfolio</a></li>
+                <li><a href="projects/law_website/index.html">law website</a></li>
+                <li><a href="projects/Red-cap-resort/index.html">Hotel website</a></li>
+                <li><a href="projects/personal_portfolio/index2.html">Personal Portfolio</a></li>
                 
                 <li class="dropdown">
                     <a href="#">Page</a>
