--- a/projects/law_website/index.html
+++ b/projects/law_website/index.html
@@ -56,9 +56,10 @@
 
 
     <div id="AboutUs" class="about-container">
-        <h2>We Provide Highly Reliable &<br> Effective Legal Solutions</h2>
+        
         <div class="about-content">
             <div class="about-text">
+                <h2 class="h2">We Provide Highly Reliable & Effective Legal Solutions</h2>
                 <p>
                     Our legal services are designed to address a wide range of 
                     legal issues. Whether you need assistance with family law, 
