updated to-do app

--- a/projects/to do list/index.html
+++ b/projects/to do list/index.html
@@ -18,7 +18,6 @@
         <h1>Task Manager</h1>
 
         <div class="board">
-            <!-- To-Do Column -->
             <div class="column" id="todoColumn">
                 <h2>To-Do</h2>
                 <button class="addTaskBtn" data-column="todo">Add Task</button>
@@ -30,32 +29,35 @@
                 <div class="task-list" id="todoList"></div>
             </div>
 
-            <!-- In-Progress Column -->
             <div class="column" id="inProgressColumn">
                 <h2>In-Progress</h2>
-                <button class="addTaskBtn" data-column="inProgress">Add Task</button>
-                <div class="task-input hidden" id="inProgressInput">
-                    <input type="text" placeholder="Title" class="task-title">
-                    <textarea placeholder="Description" class="task-desc"></textarea>
-                    <button class="saveTaskBtn">Save</button>
-                </div>
                 <div class="task-list" id="inProgressList"></div>
             </div>
 
-            <!-- Done Column -->
             <div class="column" id="doneColumn">
                 <h2>Done</h2>
-                <button class="addTaskBtn" data-column="done">Add Task</button>
-                <div class="task-input hidden" id="doneInput">
-                    <input type="text" placeholder="Title" class="task-title">
-                    <textarea placeholder="Description" class="task-desc"></textarea>
-                    <button class="saveTaskBtn">Save</button>
-                </div>
                 <div class="task-list" id="doneList"></div>
             </div>
-        </div>
+            <!-- <div class="column" id="roadblocksColumn">
+                <h2>Roadblocks</h2>
+                <div class="task-list" id="roadblocksList"></div>
+            </div>
+
+            <div class="column" id="backlogsColumn">
+                <h2>Backlogs</h2>
+                <div class="task-list" id="backlogsList"></div>
+            </div>
+
+            <div class="column" id="readyToReviewColumn">
+                <h2>Ready to Review</h2>
+                <div class="task-list" id="readyToReviewList"></div>
+        </div> -->
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
+
+
+ 
