--- a/projects/javascript practice/form1.html
+++ b/projects/javascript practice/form1.html
@@ -13,11 +13,15 @@
         background:  #b5b7fc;
         color: rgb(35, 33, 33);
     }
-    .h1{
+
+    .h1 {
       display: flex;
       margin: 15px 0;
       justify-content: center;
+      font-size: 2em;
+      color: #333;
     }
+
     .container {
         align-items: center;
         max-width: 400px;
@@ -31,11 +35,13 @@
     .form-group {
         margin-bottom: 15px;
     }
+
     label {
         display: block;
         font-weight: bold;
         margin-bottom: 5px;
     }
+
     input[type="text"],
     input[type="email"],
     input[type="password"] {
@@ -46,16 +52,19 @@
         border-radius: 4px;
         transition: border-color 0.3s;
     }
+
     input[type="text"]:focus,
     input[type="email"]:focus,
     input[type="password"]:focus {
         border-color: #007BFF;
         outline: none;
     }
+
     .error {
         color: red;
         font-size: 0.9em;
     }
+
     .submit-btn {
         display: inline-block;
         background-color: #007BFF;
@@ -67,10 +76,12 @@
         cursor: pointer;
         width: 100%;
     }
+
     .submit-btn:hover {
         background-color: #0056b3;
     }
-    Modal Styles
+
+    /* Modal Styles */
     .modal {
         display: none;
         position: fixed;
@@ -81,6 +92,7 @@
         height: 100%;
         background-color: rgba(0, 0, 0, 0.4);
     }
+
     .modal-content {
         background-color: #fff;
         margin: 15% auto;
@@ -91,6 +103,7 @@
         text-align: center;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
+
     .close-btn {
         background-color: #007BFF;
         color: #fff;
@@ -100,6 +113,7 @@
         cursor: pointer;
         margin-top: 10px;
     }
+
     .close-btn:hover {
         background-color: #0056b3;
     }
@@ -111,11 +125,13 @@
       border-radius: 4px;
       width: 100%;
     }
+
     .password input {
       padding: 10px 5px;
       outline: none;
       border: 0;
     }
+
     .pass-icon {
       position: absolute;
       width: 24px;
@@ -124,16 +140,18 @@
       cursor: pointer;
     }
 
-    /* to solve default pass icon */
+    /* To solve default pass icon */
     input[type=password]::-ms-reveal,
     input[type=password]::-ms-clear {
       display: none;
     }
+
   </style>
+
 </head>
 <body>
   <div class="container">
-    <h1 class="h1">FORM VALIDATION</h1><br>
+    <h1 class="h1">FORM VALIDATION</h1>
     <form id="myForm" onsubmit="return handleSubmit(event)">
       <div class="form-group">
         <label for="email">Email:</label>
@@ -163,15 +181,11 @@
     </form>
   </div>
 
-  Popup Modal
+  <!-- Popup Modal -->
   <div id="popupModal" class="modal">
     <div class="modal-content">
       <h2>Form Submitted Successfully!</h2>
-      <p>A popup is a small, temporary window that 
-        appears on a webpage or application to display 
-        information, get user input, or prompt an action. 
-        It is often used for alerts, notifications, or 
-        interactive features like forms or menus.</p>
+      <p>A popup is a small, temporary window that appears on a webpage or application to display information, get user input, or prompt an action. It is often used for alerts, notifications, or interactive features like forms or menus.</p>
       <button class="close-btn" onclick="closeModal()">Close</button>
     </div>
   </div>
@@ -207,18 +221,18 @@
     }
 
     function handleSubmit(event) {
-      event.preventDefault(); 
-      if (validateForm()) {
-        showModal();
+      event.preventDefault();  
+      if (validateForm()) {  
+        showModal();  
       }
     }
 
     function showModal() {
-      document.getElementById("popupModal").style.display = "block";
+      document.getElementById("popupModal").style.display = "block";  
     }
 
     function closeModal() {
-      document.getElementById("popupModal").style.display = "none";
+      document.getElementById("popupModal").style.display = "none";  
     }
 
     function togglePasswordVisibility(inputId, iconId) {
@@ -226,10 +240,10 @@
       const icon = document.getElementById(iconId);
       if (inputField.type === "password") {
         inputField.type = "text";
-        icon.src = "assets/pass-show.png";
+        icon.src = "assets/pass-show.png";  
       } else {
         inputField.type = "password";
-        icon.src = "assets/pass-hide.png";
+        icon.src = "assets/pass-hide.png";  
       }
     }
   </script>
