--- a/projects/1st day practice website/index.html
+++ b/projects/1st day practice website/index.html
@@ -3,9 +3,8 @@
 <head>
     <title>Home Page</title>
     <style>
-        /* Styling for the navigation bar */
         nav {
-            background-color: #001f3f; /* Dark blue */
+            background-color: #001f3f;
             padding: 10px 20px;
             display: flex;
             justify-content: space-around;
@@ -22,24 +21,22 @@
         }
 
         nav a:hover {
-            background-color: #004080; /* Lighter blue on hover */
+            background-color: #004080; 
         }
 
         nav a span {
             font-weight: bold;
         }
 
-        /* General body styling */
         body {
-            background-color: #001f3f; /* Dark blue theme */
-            color: white; /* White text */
+            background-color: #001f3f; 
+            color: white; 
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
         }
 
-        /* Styling for the Home section */
         #Home {
             position: relative;
             text-align: center;
@@ -61,10 +58,8 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
         }
 
-        /* Styling for the About Us section */
-
         #About\ Us {
-            background-color: #002b5c; /* Slightly lighter blue */
+            background-color: #002b5c; 
             padding: 20px;
             margin: 30px auto;
             display: flex;
@@ -82,8 +77,8 @@
         }
 
         .text-content {
-            width: 60%; /* Adjust width to leave space for the image */
-            color: #f0f0f0; /* Light gray text */
+            width: 60%; 
+            color: #f0f0f0; 
         }
 
         .text-content h2 {
@@ -105,7 +100,7 @@
         }
 
         .image-content {
-            width: 40%; /* Adjust width for the image */
+            width: 40%;
             max-width: 400px;
             height: auto;
             border-radius: 10px;
@@ -121,8 +116,6 @@
             border-radius: 5px;
         }
 
-
-        /* Styling for the Contact section */
         #Contact {
             background-color: #002b5c;
             padding: 20px 30px;
@@ -166,10 +159,8 @@
         }
 
         #Contact button:hover {
-            background-color: white; /* Darker accent color */
+            background-color: white; 
         }
-
-        /* Styling for the Table section */
         #Table {
             background-color: #002b5c;
             padding: 20px 30px;
@@ -207,7 +198,6 @@
             margin-bottom: 15px;
         }
 
-        /* Responsive design */
         @media (max-width: 768px) {
             #About\ Us, #Contact, #Table {
                 width: 95%;
